--- a/public/index.html
+++ b/public/index.html
@@ -19,26 +19,26 @@
       <li class="relative group">
         <a href="#" class="text-white px-3 py-2 hover:bg-[#124eb6] rounded">SERVIÇOS</a>
         <ul class="hidden group-hover:block absolute bg-[#0b61f3] rounded min-w-[160px] py-2">
-          <li><a href="#" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Programação</a></li>
-          <li><a href="#" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Banco de Dados</a></li>
+          <li><a href="/public/programacao.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Lógica de Programação</a></li>
+          <li><a href="/public/bancoDeDados.hmtl" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Banco de Dados</a></li>
         </ul>
       </li>
 
       <li class="relative group">
         <a href="#" class="text-white px-3 py-2 hover:bg-[#124eb6] rounded">IMPLEMENTAÇÃO</a>
         <ul class="hidden group-hover:block absolute bg-[#0b61f3] rounded min-w-[160px] py-2">
-          <li><a href="#" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Algoritmos</a></li>
-          <li><a href="../public/logicaComputacional.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Lógica Computacional</a></li>
+          <li><a href="/public/algoritmos.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Algoritmos</a></li>
+          <li><a href="/public/logicaComputacional.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Lógica Computacional</a></li>
         </ul>
       </li>
 
       <li class="relative group">
-        <a href="#" class="text-white px-3 py-2 hover:bg-[#124eb6] rounded">INFRAESTRUTURA</a>
+        <a href="" class="text-white px-3 py-2 hover:bg-[#124eb6] rounded">INFRAESTRUTURA</a>
         <ul class="hidden group-hover:block absolute bg-[#0b61f3] rounded min-w-[160px] py-2">
-          <li><a href="#" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Eletrônica</a></li>
-          <li><a href="#" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Rede</a></li>
-          <li><a href="#" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Servidores</a></li>
-          <li><a href="#" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Dispositivos</a></li>
+          <li><a href="/public/eletronica.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Eletrônica</a></li>
+          <li><a href="/public/rede.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Rede</a></li>
+          <li><a href="/public/servidores.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Servidores</a></li>
+          <li><a href="/public/dispositivos.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Dispositivos</a></li>
         </ul>
       </li>
     </ul>
@@ -74,14 +74,27 @@
       <a href="https://wa.me/5547991431399?text=Olá! Gostaria de mais informações sobre seus serviços."
          target="_blank"
          class="inline-flex items-center bg-[#d8e123] text-[#222] px-8 py-4 rounded-full font-bold text-lg shadow transition duration-500 hover:bg-[#c5d100] hover:-translate-y-1 hover:shadow-xl">
-        Venha e veja
+        Fale com um especialista
       </a>
     </div>
   </section>
 
-   
- 
-   
+  <section class="text-gray-600 body-font relative">
+  <div class="absolute inset-0">
+    <iframe 
+      class="w-full h-full"
+      style="filter: grayscale(1) contrast(1.2) opacity(0.9);" 
+      marginheight="0" 
+      marginwidth="0" 
+      title="map" 
+      scrolling="no" 
+      src="https://maps.google.com/maps?q=Rua%20254%2C%20415%2C%20Itapema%20Meia%20Praia%20Santa%20Catarina%20Brasil&ie=UTF8&t=&z=15&iwloc=B&output=embed" 
+      frameborder="0">
+    </iframe>
+  </div>
+  <div class="container mx-auto h-[500px]"></div>
+</section>
+
 
   <footer class="bg-[#222] text-white mt-auto">
     <div class="py-10 px-5 flex justify-center">
