correção de caminho

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <a href="#" class="text-white px-3 py-2 hover:bg-[#124eb6] rounded">SERVIÇOS</a>
         <ul class="hidden group-hover:block absolute bg-[#0b61f3] rounded min-w-[160px] py-2">
           <li><a href="/public/programacao.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Lógica de Programação</a></li>
-          <li><a href="/public/bancoDeDados.hmtl" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Banco de Dados</a></li>
+          <li><a href="/public/bancoDeDados.html" class="block px-4 py-2 text-sm text-white hover:bg-[#124eb6]">Banco de Dados</a></li>
         </ul>
       </li>
 
