Correção de iframe

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <a href="https://wa.me/5547991431399?text=Olá! Gostaria de mais informações sobre seus serviços."
+      <a href="https://wa.me/5547991431399?text=Olá! Gostaria de mais informações sobre a Bello´s Softwares."
          target="_blank"
          class="inline-flex items-center bg-[#d8e123] text-[#222] px-8 py-4 rounded-full font-bold text-lg shadow transition duration-500 hover:bg-[#c5d100] hover:-translate-y-1 hover:shadow-xl">
         Fale com um especialista
@@ -81,16 +81,22 @@
 
   <section class="text-gray-600 body-font relative">
   <div class="absolute inset-0">
-    <iframe 
-      class="w-full h-full"
-      style="filter: grayscale(1) contrast(1.2) opacity(0.9);" 
-      marginheight="0" 
-      marginwidth="0" 
-      title="map" 
-      scrolling="no" 
-      src="https://maps.google.com/maps?q=Rua%20254%2C%20415%2C%20Itapema%20Meia%20Praia%20Santa%20Catarina%20Brasil&ie=UTF8&t=&z=15&iwloc=B&output=embed" 
-      frameborder="0">
-    </iframe>
+    <iframe
+  class="w-full h-full rounded-2xl shadow-md"
+  style="filter: grayscale(1) contrast(1.2) opacity(0.9);"
+  marginheight="0"
+  marginwidth="0"
+  title="Mapa - Itapema Meia Praia"
+  scrolling="no"
+  src="https://maps.google.com/maps?q=Rua%20254%2C%20415%2C%20Itapema%20Meia%20Praia%20Santa%20Catarina%20Brasil&ie=UTF8&t=&z=15&iwloc=B&output=embed"
+  frameborder="0"
+  allowfullscreen
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
+
+  
   </div>
   <div class="container mx-auto h-[500px]"></div>
 </section>
