--- a/logicaComputacional.html
+++ b/logicaComputacional.html
@@ -149,14 +149,14 @@
     <h2 class="text-2xl font-bold mb-4">6. Exemplos de Programas em Portugol (Funções)</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-      <div class="h-56 bg-gray-100 rounded-lg border flex items-center justify-center">
-        <span class="text-gray-500">Print da tela 1</span>
+      <div class="h-144 bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center p-2">
+        <img src="img/codigo1.png" alt="Código 1" class="w-full h-full object-contain">
       </div>
-      <div class="h-56 bg-gray-100 rounded-lg border flex items-center justify-center">
-        <span class="text-gray-500">Print da tela 2</span>
+      <div class="h-80 bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center p-2">
+        <img src="img/codigo2.png" alt="Código 2" class="w-full h-full object-contain">
       </div>
-      <div class="h-56 bg-gray-100 rounded-lg border flex items-center justify-center">
-        <span class="text-gray-500">Print da tela 3</span>
+      <div class="h-80 bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center p-2">
+        <img src="img/codigo3.png" alt="Código 3" class="w-full h-full object-contain">
       </div>
     </div>
   </div>
@@ -166,14 +166,14 @@
     <h2 class="text-2xl font-bold mb-4">7. Exemplos de Programas em Portugol (Vetores)</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-      <div class="h-56 bg-gray-100 rounded-lg border flex items-center justify-center">
-        <span class="text-gray-500">Print da tela 1</span>
+      <div class="h-80 bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center p-2">
+        <img src="img/vetor1.png" alt="Vetor 1" class="w-full h-full object-contain">
       </div>
-      <div class="h-56 bg-gray-100 rounded-lg border flex items-center justify-center">
-        <span class="text-gray-500">Print da tela 2</span>
+      <div class="h-80 bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center p-2">
+        <img src="img/vetor2.png" alt="Vetor 2" class="w-full h-full object-contain">
       </div>
-      <div class="h-56 bg-gray-100 rounded-lg border flex items-center justify-center">
-        <span class="text-gray-500">Print da tela 3</span>
+      <div class="h-80 bg-gray-100 rounded-lg overflow-hidden flex items-center justify-center p-2">
+        <img src="img/vetor3.png" alt="Vetor 3" class="w-full h-full object-contain">
       </div>
     </div>
   </div>
